--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -1,13 +1,26 @@
 .sendForm {
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    gap: 10px;
+    margin-top: 10px;
 }
 
 .textarea {
-
+    display: inline-block;
+    width: 60%;
+    border-radius: 15px;
+    background-color: #f5f7fb;
 }
 
 .button {
-
+    padding: 10px;
+    border-radius: 25px;
+    width: 100px;
+    border: none;
+    color: white;
+    background-color: #0066cc;
 }
 
 .button:hover {
