--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,25 +1,48 @@
 .message {
-
+    display: flex;
+    align-items: flex-end;
+    justify-content: right;
+    position: relative;
 }
 
 .imageAndText {
-
+    display: flex;
+    align-items: flex-end;
+    flex-direction: row-reverse;
+    padding: 10px;
+    gap: 15px;
 }
 
 .imageAndText img {
-
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 .text {
-
+    background-color: #0066cc;
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+    position: relative;
+    text-align: right;
+    width: 100%;
 }
 
 .text:after {
-
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 98%;
+    display: block;
+    width: 30px;
+    height: 25px;
+    background: radial-gradient(55px at top right, transparent 49%, #0066cc 51%) no-repeat right bottom;
 }
 
 .name {
-
+    font-weight: bold;
 }
 
 .messageText {
@@ -27,5 +50,9 @@
 }
 
 .time {
-
+    color: black;
+    font-size: smaller;
+    position: absolute;
+    right: 20px;
+    bottom: -8px;
 }
