--- a/src/s2-homeworks/hw03/Greeting.module.css
+++ b/src/s2-homeworks/hw03/Greeting.module.css
@@ -1,22 +1,46 @@
 .greetingForm {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    margin: 10px;
 }
 
 .inputAndButtonContainer {
+    display: flex;
+    align-items: flex-start;
+    gap: 5px;
 }
 
 .error {
+    color: red;
 }
 
 .input {
+    border: 1px solid lightslategray;
+    border-radius: 5px;
+    width: 200px;
+    height: 25px;
 }
 
 .input:focus {
+    outline: #0077d3 solid 1px;
 }
 
 .errorInput {
+    border: 1px solid red;
+    border-radius: 5px;
+    width: 200px;
+    height: 25px;
 }
 
 .button {
+    background-color: #0077d3;
+    color: white;
+    padding: 5px;
+    width: 50px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
 }
 
 .button:focus {
@@ -26,9 +50,13 @@
 }
 
 .button:disabled {
+    background-color: #80b3e6;
+    cursor: not-allowed;
 }
 
 .text {
+    color: darkgray;
+    font-size: 13px;
 }
 
 .greeting {
