--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -1,36 +1,68 @@
 .button {
+    width: 132px;
+    height: 30px;
+    border-radius: 3px;
+    padding: 5px 24px 5px 24px;
+    border: none;
+    color: white;
+    cursor: pointer;
+    box-sizing: border-box;
+    transition: width 0.5s;
 }
 
+
 .disabled {
+    background-color: rgba(0, 77, 153, 1);
+    opacity: 0.5;
+    color: black;
 }
 
 .secondary {
+    width: 150px;
+    border: 1px solid rgba(0, 102, 204, 1);
+    background-color: white;
+    color: rgba(0, 102, 204, 1);
 }
 
 .default {
+    background-color: #0066CC;
 }
 
 .red {
+    background-color: #CC1439;
 }
 
 .default:hover {
+    background-color: rgba(0, 128, 255, 1);
+    width: 167px;
 }
 
 .red:hover {
+    background-color: rgba(255, 26, 71, 1);
+    width: 167px;
 }
 
 .secondary:hover {
+    background-color: rgba(229, 240, 250, 1);
+    width: 167px;
 }
 
 
 .default:active {
+    background-color: rgba(0, 89, 178, 1);
 }
 
 .secondary:active {
+    background-color: rgba(201, 229, 255, 1);
 }
 
 .red:active {
+    background-color: rgba(178, 18, 50, 1)
 }
 
 .button:disabled {
+    background-color: rgba(0, 77, 153, 1);
+    opacity: 0.5;
+    color: black;
+    cursor: not-allowed;
 }
