--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -1,11 +1,16 @@
 .App {
     --header_height: 60px;
+    width: 100%;
 }
 
 .hw {
-
+    margin: 20px;
 }
 
 .hwTitle {
-
+    margin: 20px;
+    padding: 5px;
+    font-size: larger;
+    font-weight: bolder;
+    border-bottom: lightslategrey solid 1px;
 }
