--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -9,9 +9,14 @@
 
 .textarea {
     display: inline-block;
+    min-height: 40px;
+    max-height: 40px;
     width: 60%;
+    max-width: 60%;
+    min-width: 60%;
     border-radius: 15px;
     background-color: #f5f7fb;
+    padding: 5px;
 }
 
 .button {
