--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -24,21 +24,10 @@
     background-color: #0066cc;
     color: white;
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 10px 10px 0px 10px;
     position: relative;
     text-align: right;
     width: 100%;
-}
-
-.text:after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 98%;
-    display: block;
-    width: 30px;
-    height: 25px;
-    background: radial-gradient(55px at top right, transparent 49%, #0066cc 51%) no-repeat right bottom;
 }
 
 .name {
