--- a/src/s2-homeworks/hw05/header/Header.module.css
+++ b/src/s2-homeworks/hw05/header/Header.module.css
@@ -2,6 +2,10 @@
 }
 
 .header {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 50px;
+    box-shadow: 0px 38px 34px -25px rgba(34, 60, 80, 0.19);
 }
 
 .header h1 {
