--- a/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
+++ b/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
@@ -1,24 +1,70 @@
 .sidebar {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    overflow-x: hidden;
+    background-color: white;
+    padding-top: 60px;
+    transition: 0.7s;
 }
 
 .sidebar.open {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    background-color: #d3faff;
+    height: 100%;
+    padding: 50px;
+    width: 300px;
+    gap: 15px;
+    transition: 0.7s;
+    opacity: 1;
 }
 
 .background {
+    background-color: black;
+    opacity: 0.5;
+    position: absolute;
+    width: 100%;
+    z-index: 1;
+    height: 100vh;
 }
 
 .nav {
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
 }
 
 .nav a {
+    display: block;
+    color: black;
+    text-decoration-line: none;
+    font-weight: bolder;
+    width: 200px;
+    padding: 20px 30px;
 }
 
 .nav a:hover {
+    color: #58ACFF;
 }
 
 .nav a.active {
+    text-decoration-line: underline;
+    color: #0059B2;
 }
+
 .close {
+    width: 0;
+    background-color: white;
+    border: none;
+    position: absolute;
+    top: 20px;
+    right: 50px;
+    margin-left: 50px;
 }
 
 .close img {
