--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -7,7 +7,7 @@
     color: white;
     cursor: pointer;
     box-sizing: border-box;
-    transition: width 0.5s;
+    margin: 5px;
 }
 
 
@@ -18,7 +18,6 @@
 }
 
 .secondary {
-    width: 150px;
     border: 1px solid rgba(0, 102, 204, 1);
     background-color: white;
     color: rgba(0, 102, 204, 1);
