--- a/src/s2-homeworks/hw07/HW7.module.css
+++ b/src/s2-homeworks/hw07/HW7.module.css
@@ -1,2 +1,10 @@
 .container {
+    display: flex;
+    width: 500px;
+    gap: 30%;
+}
+
+.container div {
+    display: flex;
+    flex-direction: column;
 }
