--- a/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
+++ b/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
@@ -1,9 +1,14 @@
 .select {
+    width: 165px;
+    height: 24px;
+    border: 1px rgba(194, 194, 194, 1) solid;
+    border-radius: 2px;
 }
 
 .select:focus {
+    outline: 1px rgba(194, 194, 194, 1) solid;
 }
 
-
 .option:hover {
+    background-color: rgba(194, 194, 194, 1);
 }
