--- a/src/s2-homeworks/hw07/common/c6-SuperRadio/SuperRadio.module.css
+++ b/src/s2-homeworks/hw07/common/c6-SuperRadio/SuperRadio.module.css
@@ -1,5 +1,7 @@
 .radio {
+
 }
+
 
 .radio::before {
 }
@@ -9,7 +11,12 @@
 }
 
 .label {
+    margin: 5px;
 }
 
 .options {
+}
+
+.span {
+    margin-left: 5px;
 }
