--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -2,7 +2,7 @@
     width: 132px;
     height: 30px;
     border-radius: 3px;
-    padding: 5px 24px 5px 24px;
+    padding: 5px 14px;
     border: none;
     color: white;
     cursor: pointer;
