--- a/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
+++ b/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
@@ -1,5 +1,5 @@
 .select {
-    width: 165px;
+    max-width: 165px;
     height: 24px;
     border: 1px rgba(194, 194, 194, 1) solid;
     border-radius: 2px;
